# python-basic-2025-09

./: .pylintrc  Makefile  README.md  blog1.json  blog_post.json  blog_post_author.json  manage.py  pyproject.toml
.github/workflows/: lint.yml  test.yml
blog_app/: admin.py  forms.py  models.py  urls.py  views.py
blog_app/management/commands/: gen_data.py
blog_app/migrations/: 0001_initial.py
blog_app/templates/blog_app/: author_detail.html  author_list.html  base.html  index.html  post_add.html  post_delete.html  post_detail.html  post_edit.html  post_list.html
blog_app/templates/blog_app/include/: menu.html
blog_app/tests/: conftest.py  test_forms.py  test_models.py  test_templates.py  test_views.py
config/: settings.py  urls.py
user_app/: forms.py  models.py  views.py
user_app/migrations/: 0001_initial.py
user_app/templates/user_app/: login.html  logout.html  register.html
