[project]
name = "otus-django-2025-09"
version = "0.1.0"
description = ""
authors = [
    {name = "Stanislav"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "faker (>=40.5.1,<41.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-django = "^4.12.0"
pytest-mock = "^3.15.1"

[tool.poetry]
package-mode = false